--- a/src/Game/MainPage.xaml
+++ b/src/Game/MainPage.xaml
@@ -248,24 +248,44 @@
                             Foreground="White"
                             Name="OverScore" Style="{StaticResource PhoneTextLargeStyle}" Text="" />
                     </StackPanel>
-                    <Button
-                        Margin="24,12"
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Button
+                            Grid.Row="0"
+                            Grid.Column="0"
+                        Margin="24,12, 12,12"
                         Style="{StaticResource GameButtonStyle}"
                         Name="OverKeepPlaying"
                         Content="{Binding S.OverKeepPlaying ,Source={StaticResource Strings}}" />
-                    <Button
-                        Margin="24,12"
+                        <Button
+                            Grid.Column="0"
+                                Grid.Row="0"
+                        Margin="24,12, 12,12"
                         Style="{StaticResource GameButtonStyle}"
                         Name="ShowGameField"
                         Content="{Binding S.ShowGameField ,Source={StaticResource Strings}}" />
-                    <Button
-                        Margin="24,12"
+                        <Button
+                            Grid.Column="1"
+                                Grid.Row="0"
+                        Margin="12,12, 24,12"
                         Style="{StaticResource GameButtonStyle}"
                         Name="OverReset" Content="{Binding S.OverReset, Source={StaticResource Strings}}" />
-                    <Button
+                        <Button
+                            Grid.Column="0"
+                            Grid.ColumnSpan="2"
+                                Grid.Row="1"
                         Margin="24,12"
                         Style="{StaticResource GameButtonStyle}"
                         Name="OverShare" Content="{Binding S.OverShareResult, Source={StaticResource Strings}}" />
+                    </Grid>
+                   
                 </StackPanel>
             </Grid>
         </Canvas>
